--- a/stacks/root/docker-compose.yml
+++ b/stacks/root/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - traefik.enable=true
       - traefik.web.backend=root
       - traefik.web.port=80
-      - traefik.web.protocol=https,http
-      - traefik.web.frontend.entryPoints=https,http
+      - traefik.web.protocol=http
+      - traefik.web.frontend.entryPoints=http,https
       - traefik.web.frontend.passHostHeader=true
       - traefik.web.frontend.rule=Host:${ROOT_URL}
     networks:
