--- a/stacks/proxy/docker/proxy/traefik.toml
+++ b/stacks/proxy/docker/proxy/traefik.toml
@@ -21,7 +21,7 @@ debug = true
 # Optional
 # Default: "ERROR"
 #
-logLevel = "ERROR"
+logLevel = "DEBUG"
 
 # Enable access logs
 # By default it will write to stdout and produce logs in the textual
@@ -60,29 +60,23 @@ defaultEntryPoints = ["http", "https", "ws", "wss"]
 # Required
 #
 address = ":8080"
-
-# Entrypoints, http and https
-[entryPoints]
-
-# http should be redirected to https
-[entryPoints.http]
-address = ":80"
-[entryPoints.http.redirect]
-entryPoint = "https"
-
-# https is the default
-[entryPoints.https]
-address = ":443"
-[entryPoints.https.tls]
+#[entryPoints]
+#  [entryPoints.http]
+#  address = ":80"
+#    [entryPoints.http.redirect]
+#      entryPoint = "https"
+#  [entryPoints.https]
+#  address = ":443"
+#    [entryPoints.https.tls]
 
 # Enable ACME (Let's Encrypt): automatic SSL
-[acme]
+#[acme]
 # caServer = "https://acme-staging.api.letsencrypt.org/directory"
-email = "purplefish32@gmail.com"
-storage = "acme.json" # or "traefik/acme/account" if using KV store
-entryPoint = "https"
-onDemand = false
-OnHostRule = true
+#email = "purplefish32@gmail.com"
+#storage = "acme.json" # or "traefik/acme/account" if using KV store
+#entryPoint = "https"
+#onDemand = false
+#OnHostRule = true
 
 ################################################################
 # Docker configuration backend
@@ -91,8 +85,8 @@ OnHostRule = true
 # Enable Docker configuration backend
 [docker]
 
-endpoint = "unix:///var/run/docker.sock"
-domain = "donovan-tengblad.com"
+# endpoint = "unix:///var/run/docker.sock"
+# domain = "donovan-tengblad.loc"
 watch = true
 exposedbydefault = false
 
