--- a/stacks/root/docker-compose.yml
+++ b/stacks/root/docker-compose.yml
@@ -4,13 +4,14 @@ services:
   web:
     build: docker/web
     labels:
+      - traefik.backend=web
       - traefik.enable=true
-      - traefik.web.backend=root
-      - traefik.web.port=80
-      - traefik.web.protocol=http
-      - traefik.web.frontend.entryPoints=http,https
-      - traefik.web.frontend.passHostHeader=true
-      - traefik.web.frontend.rule=Host:${ROOT_URL}
+      - traefik.docker.network=proxy_network
+      - traefik.port=80
+      - traefik.protocol=http
+      - traefik.frontend.entryPoints=http
+      - traefik.frontend.passHostHeader=true
+      - traefik.frontend.rule=Host:${ROOT_URL}
     networks:
       - proxy_network
 
