--- a/stacks/ws-tcp-relay/docker-compose.yml
+++ b/stacks/ws-tcp-relay/docker-compose.yml
@@ -1,25 +1,28 @@
 version: "3"
 
 services:
-  ws-tcp-relay:
+  ws:
     build: docker/ws-tcp-relay
     networks:
-      - nats_network
+      #- nats_network
       - proxy_network
+    ports:
+      - 4223:4223
     labels:
+      - traefik.backend=ws
       - traefik.enable=true
-      - traefik.wss.backend=ws-tcp-relay
-      - traefik.wss.port=4223
-      - traefik.wss.protocol=wss
-      - traefik.wss.frontend.entryPoints=wss
-      - traefik.wss.frontend.rule=Host:${ROOT_URL}
-      - traefik.wss.frontend.passHostHeader=true
-    command: ws-tcp-relay nats -p 4223
+      - traefik.docker.network=proxy_network
+      - traefik.port=4223
+      - traefik.protocol=ws
+      - traefik.frontend.entryPoints=ws
+      - traefik.frontend.rule=Host:ws.${ROOT_URL}
+      - traefik.frontend.passHostHeader=true
+    command: ws-tcp-relay -p 4223 nats:4222
 
 networks:
-  nats_network:
-    external:
-      name: nats_network
+  #nats_network:
+  #  external:
+  #    name: nats_network
 
   proxy_network:
     external:
