--- a/stacks/ws-tcp-relay/docker-compose.yml
+++ b/stacks/ws-tcp-relay/docker-compose.yml
@@ -13,10 +13,8 @@ services:
       - traefik.enable=true
       - traefik.docker.network=proxy_network
       - traefik.port=4223
-      - traefik.protocol=ws
-      - traefik.frontend.entryPoints=ws
-      - traefik.frontend.rule=Host:ws.${ROOT_URL}
-      - traefik.frontend.passHostHeader=true
+      - traefik.frontend.rule=Host:api.donovan-tengblad.loc
+      - traefik.passHostHeader=true
     command: ws-tcp-relay -p 4223 nats:4222
 
 networks:
