--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,10 +16,11 @@ services:
       - nginx
     volumes:
       - ./docker/varnish/conf:/etc/varnish:ro
+    ports:
+      - "8066:80"
     labels:
       - traefik.backend=api
       - traefik.enable=true
-      - traefik.docker.network=proxy_network
       - traefik.frontend.entryPoints=http,https
       - traefik.frontend.rule=Host:api.${MYAPI_ROOT_URL}
       - traefik.passHostHeader=true
@@ -77,7 +78,6 @@ services:
     labels:
       - traefik.backend=ws
       - traefik.enable=true
-      - traefik.docker.network=proxy_network
       - traefik.port=4223
       - traefik.protocol=ws
       - traefik.frontend.entryPoints=http,https,ws,wss
