--- a/docker/api/app/config/config.yml
+++ b/docker/api/app/config/config.yml
@@ -61,6 +61,15 @@ doctrine:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        # entity_managers:
+        #     default:
+        #         mappings:
+        #             gedmo_slugable:
+        #                 type: annotation
+        #                 prefix: Gedmo\Slugable\Entity
+        #                 dir: "%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Slugable/Entity"
+        #                 alias: GedmoSlugable # (optional) it will default to the name set for the mapping
+        #                 is_bundle: false
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -90,3 +99,9 @@ api_platform:
         shared_max_age: 3600
         vary: ['Content-Type', 'Authorization']
         public: true
+
+stof_doctrine_extensions:
+    default_locale: fr_FR
+    orm:
+        default:
+            sluggable: true
